--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -1,4 +1,4 @@
-BufferedReader(Scanner 대신!)
+'''BufferedReader(Scanner 대신!)
 
 ```
   BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
