--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -1,4 +1,4 @@
-'''BufferedReader(Scanner 대신!)
+## BufferedReader(Scanner 대신!)
 
 ```
   BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
@@ -9,9 +9,10 @@
 
 
 
+## StringBuilder
 ```
-  StringBuilder sb = new StringBuilder();
-  sb.append(res + "\n");
+  StringBuilder sb = new StringBuilder(); //객체 생성
+  sb.append(res + "\n");    //필요한 곳에서 결과 저장
           
-  System.out.println(sb.toString());
+  System.out.println(sb.toString());  //한번에 출력
 ```
