--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -15,4 +15,6 @@
   sb.append(res + "\n");    //필요한 곳에서 결과 저장
           
   System.out.println(sb.toString());  //한번에 출력
+  
 ```
+[StringBuilder란](https://hardlearner.tistory.com/288)
