--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -1,4 +1,11 @@
-## BufferedReader(Scanner 대신!)
+
+
+
+## 시간 줄이기 !
+![screenshot1](./img/screenshot1.PNG)
+
+
+### 1. BufferedReader
 
 ```
   BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
@@ -9,7 +16,7 @@
 
 
 
-## StringBuilder
+### 2. StringBuilder
 ```
   StringBuilder sb = new StringBuilder(); //객체 생성
   sb.append(res + "\n");    //필요한 곳에서 결과 저장
