--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -8,8 +8,8 @@
 (*보통 1억번의 연산하는데 걸리는 시간 1초)  
 => 제한시간 1초라서 시간 복잡도를 줄이는 방법을 찾아야함  
 <br>
-<br>
-SUM 들의 배열을 저장하기  
+
+_SUM 들의 배열을 저장하기_  
 ex)  
 arr : 1 2 3 4 5 6 7 8 9 10  
 sum : 1 3 6 10 15 21 28 36 45 55  
@@ -18,7 +18,7 @@ sum : 1 3 6 10 15 21 28 36 45 55
 => O(N)  
 
   
-
+<br>
 ## 메모리 & 시간 효율화
 ![screenshot1](./screenshot1.PNG)
 
