--- a/풀이/수연/1주차/3번.md
+++ b/풀이/수연/1주차/3번.md
@@ -9,7 +9,7 @@
 => 제한시간 1초라서 시간 복잡도를 줄이는 방법을 찾아야함  
 <br>
 
-_SUM 들의 배열을 저장하기_  
+__SUM 들의 배열을 저장하기__ 
 ex)  
 arr : 1 2 3 4 5 6 7 8 9 10  
 sum : 1 3 6 10 15 21 28 36 45 55  
