--- a/풀이/수연/3주차/풀이.md
+++ b/풀이/수연/3주차/풀이.md
@@ -24,3 +24,32 @@ eIdx 가 끝까지 가도 sum보다 커지지 않는경우
   
     
 <br>
+
+
+### 011 스택수열 - 스택  
+스택 LIFO - push, pop  
+  
+ex1) 8 /  4 3 6 8 7 5 2 1  
++ + + +  
+  
+int stack_num = 1; // 스택에 넣을 숫자  
+입력값 만큼 loop for(j = 1; j<9; j++){  
+	int num = 4  
+	while(stack이 비어있거나, stack의 peek가 num이 될때까지){  
+		 push(stack_num++);  
+	}  
+  
+	if(stack의 peek가 num이면){  
+		pop();  
+	}  
+  
+}  
+  
+  
+* 못만드는 경우는 stack의 peek가 num이 아니면서,  stack_num가 n+1(n보다 커졌을 때)  
+->n까지 넣을 수 있는 모든 수를 다 넣었는데 stack peek가 아님  
+ if(stack_num>=n+1){  
+	isEnable = false;  
+	break;  
+ }  
+=> 중간에 모든 loop 빠져나가게 처리  
