--- a/풀이/수연/3주차/풀이.md
+++ b/풀이/수연/3주차/풀이.md
@@ -1,5 +1,5 @@
 ## 풀이
-### 007 주몽
+### 007 주몽 -- 투포인터
 
 1. 입력   
 2. 정렬  
@@ -26,6 +26,18 @@ eIdx 가 끝까지 가도 sum보다 커지지 않는경우
     
 <br>
 
+
+---
+### 009 DNA 비밀번호 - 슬라이딩 윈도우 
+
+** 시간초과 
+subString() 메소드
+=> 시간복잡도 O(n) (n : 문자열 길이)  
+=> index값으로 자르지말고 원래 문자열 index사용하기
+
+
+  
+<br>
 
 --- 
 
