--- a/풀이/보영/8주차/SQL/ex004-006.md
+++ b/풀이/보영/8주차/SQL/ex004-006.md
@@ -1,1 +1,12 @@
 
+## 004 조건에 맞는 도서와 저자 리스트 출력하기
+```sql
+SELECT  b.BOOK_ID AS BOOK_ID,
+        a.AUTHOR_NAME AS AUTHOR_NAME,
+        TO_CHAR(b.PUBLISHED_DATE, 'yyyy-mm-dd') AS PUBLISHED_DATE
+  FROM BOOK b
+  JOIN AUTHOR a
+   ON b.AUTHOR_ID = a.AUTHOR_ID
+  WHERE b.CATEGORY = '경제'
+  ORDER BY PUBLISHED_DATE ;
+```
