--- a/풀이/보영/8주차/SQL/ex004-006.md
+++ b/풀이/보영/8주차/SQL/ex004-006.md
@@ -10,3 +10,15 @@ SELECT  b.BOOK_ID AS BOOK_ID,
   WHERE b.CATEGORY = '경제'
   ORDER BY PUBLISHED_DATE ;
 ```
+
+## 005 그룹별 조건에 맞는 식당 목록 출력하기
+```sql
+SELECT M.MEMBER_NAME, R.REVIEW_TEXT, DATE_FORMAT(R.REVIEW_DATE, "%Y-%m-%d") AS REVIEW_DATE
+FROM MEMBER_PROFILE M INNER JOIN REST_REVIEW R
+ON M.MEMBER_ID = R.MEMBER_ID
+WHERE M.MEMBER_ID = (SELECT MEMBER_ID 
+                     FROM REST_REVIEW
+                 GROUP BY MEMBER_ID
+                 ORDER BY COUNT(*) DESC LIMIT 1)
+ORDER BY REVIEW_DATE, REVIEW_TEXT;
+```
