--- a/풀이/보영/8주차/SQL/ex004-006.md
+++ b/풀이/보영/8주차/SQL/ex004-006.md
@@ -22,3 +22,17 @@ WHERE M.MEMBER_ID = (SELECT MEMBER_ID
                  ORDER BY COUNT(*) DESC LIMIT 1)
 ORDER BY REVIEW_DATE, REVIEW_TEXT;
 ```
+
+## 006 상품을 구매한 회원 비율 구하기 - 프로그래머스
+```sql
+SELECT YEAR, MONTH, COUNT(*) AS PUCHASED_USERS,
+	ROUND((COUNT(*)/ (SELECT COUNT(*)
+					FROM USER_INFO WHERE YEAR(JOINED) = 2021)), 1) AS PUCHASED_RATIO
+FROM (
+    SELECT DISTINCT YEAR(S.SALES_DATE) AS YEAR, MONTH(S.SALES_DATE) AS MONTH, U.USER_ID
+    FROM ONLINE_SALE S
+    JOIN USER_INFO U ON S.USER_ID = U.USER_ID AND YEAR(JOINED) = 2021
+) A
+GROUP BY YEAR, MONTH
+ORDER BY YEAR, MONTH
+```
